# polymarket-client-sdk-ext

./: AGENTS.md  Cargo.toml  README.md  blockers.md  fnox.toml  mise.toml  rumdl.toml  rust-toolchain.toml
.agents/: docs.md  fjall.md  knowledge.md  polymarket-client-sdk-ext.concepts.draft.md  polymarket-client-sdk-ext.concepts.md  precise-types.concepts.md  project.draft.md  project.md  propmine.concepts.md  rkyv.knowledge.md  simulator.md
.agents/docs/: polymarket-knowledge.md
.agents/docs/docs.polymarket.com/changelog/: changelog.md
.agents/docs/docs.polymarket.com/developers/: proxy-wallet.md
.agents/docs/docs.polymarket.com/quickstart/: fetching-data.md  first-order.md  overview.md
.config/: nextest.toml
.mise/tasks/db/: check.sh  get.sh  list.sh
.mise/tasks/db/get/: clob_market_responses.sh  clob_markets.sh  gamma_events.sh
.mise/tasks/db/list/: clob_market_responses.sh
.mise/tasks/db/query/: clob_market_responses_summaries.sh  clob_market_responses_summary.sh  (+1 more)
.yolobox/configs/: secret_env_vars.txt
fixtures/: markets_response.json  orderbook.json  orderbook_response.json
fixtures/gamma_event/: another-us-strike-on-venezuela-by.json  nobel-peace-prize-winner-2026-139.json
specs/: download-polymarket-docs.md  find-more-properties.md  fix-cache.md  fix-get-time-spread-arbitrage-opportunities.md  fix-serialization-deserialization.md  impl-archive-for-book-side.md  impl-cache-check.md  impl-cache-gamma-events-list-date-cascades.md  impl-list-date-cascades.md  impl-monitor.md  impl-rkyv.md  impl-transcode.md  merge-download-and-test.md  refactor-cache-2.md  refactor-cache-list.md  refactor-cache.md  refactor-download-cache.md  refactor-fns-2.md  refactor-fns.md  refactor-is-date-cascade.md  refactor-round-trip-tests.md  refactor-to-bitcode.md  refactor_open_keyspace.md  try-end-date-no-option.md  try-postcard.md  use-rkyv-in-cache-download.md
src/: command.rs  constants.rs  ext.rs  functions.rs  integration_tests.rs  lib.rs  main.rs  properties.rs  test_helpers.rs  tests.rs  traits.rs  types.rs
src/command/: cache_check_command.rs  cache_command.rs  cache_download_command.rs  cache_gamma_events_command.rs  cache_market_responses_command.rs  cache_order_book_summary_responses_command.rs  cache_test_command.rs  clob_command.rs  list_related_markets_command.rs  transcode_command.rs
src/command/cache_gamma_events_command/: cache_gamma_events_list_date_cascades_command.rs  cache_gamma_events_monitor_date_cascades_command.rs  cache_gamma_events_monitor_time_spread_opportunities_command.rs
src/command/cache_market_responses_command/: cache_market_responses_list_command.rs
src/command/cache_order_book_summary_responses_command/: cache_order_book_summary_responses_list_command.rs
src/command/clob_command/: clob_place_limit_order_command.rs
src/ext/: alloy.rs  polymarket_client_sdk.rs  serde.rs  time.rs
src/ext/polymarket_client_sdk/: gamma.rs
src/ext/serde/: deserialize_or_none.rs
src/ext/time/: duration_in_seconds_visitor.rs  from_chrono_date_time.rs  rfc3339_visitor.rs  timestamp_visitor.rs
src/functions/: format_debug_diff.rs  get_all.rs  get_middle_diffs.rs  is_date_like.rs  open_keyspace.rs  progress_report_line.rs  try_round_trip.rs
src/integration_tests/: get_markets.rs  get_orderbooks.rs
src/properties/: active_xor_closed.rs  if_any_token_is_winner_then_market_is_closed.rs  if_condition_id_is_none_then_orders_are_disabled.rs  if_condition_id_is_none_then_tokens_are_placeholders.rs  if_is5050outcome_then_both_tokens_are_winners.rs  if_is_50_50_outcome_then_both_tokens_are_losers.rs  is_50_50_outcome_iff_both_tokens_are_winners.rs  market_slug_is_unique.rs  max_winner_token_count_is_one.rs  question_id_is_none_iff_condition_id_is_none.rs  some_markets_are_test_markets.rs  token_id_is_unique.rs  token_id_is_unique_or_zero.rs  token_prices_are_probabilities.rs  tokens_len_is_two.rs
src/tests/: caching_tests.rs
src/traits/: holds.rs  property.rs  should_download_orderbooks.rs
src/types/: amount.rs  book_params.rs  book_side.rs  book_side_map.rs  clob_client.rs  clob_market.rs  clob_market_response_precise.rs  condition_id.rs  duration_positive_seconds.rs  event.rs  event_id.rs  expr.rs  flank.rs  gamma_event.rs  gamma_market.rs  level.rs  market.rs  market_exchange.rs  market_relation.rs  market_relation_info.rs  market_response.rs  market_response_precise.rs  neg_risk.rs  opinion_market.rs  opinion_market_page.rs  order_book.rs  order_book_summary_response_precise.rs  order_type.rs  orderbook.rs  output_kind.rs  payload_iterator.rs  prefix_kind.rs  property_distribution.rs  property_name.rs  property_stats.rs  related_markets_format.rs  rest_client_old.rs  reward_rate.rs  rewards.rs  rkyv_decimal.rs  (+13 more)
src/types/property_distribution/: property_distribution_simple_view.rs  property_distribution_view.rs
tests/: get_markets.rs  get_orderbooks.rs
yolobox/configs/: secret_env_vars.txt
yolobox/configs/dnsmasq.d/: .gitignore  allowed_domains.conf
(+148 files in other folders)
