[package]
name = "polymarket-client-sdk-ext"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "Polymarket API client"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/polymarket-client-sdk-ext"
repository = "https://github.com/DenisGorbachev/polymarket-client-sdk-ext"
keywords = ["polymarket", "api"]
categories = ["api-bindings"]
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    "yolobox"
]

[package.metadata.details]
title = "Polymarket API client"
tagline = ""
summary = ""
announcement = ""

[dependencies]
alloy = { version = "1.4.0", default-features = false, features = ["std", "serde"] }
async-stream = { version = "0.3.6" }
chrono = "0.4.43"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic", features = ["futures"] }
fmt-derive = { version = "0.1.2" }
futures = { version = "0.3.30" }
indexmap = { version = "2.6.0", features = ["serde"] }
polymarket-client-sdk = { version = "0.4.1", features = ["clob", "gamma", "data", "tracing"], git = "https://github.com/DenisGorbachev/rs-clob-client" }
reqwest = { version = "0.13.1", features = ["json"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
rustc-hash = { version = "2.0.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.132" }
#standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
stub-macro = "0.2.1"
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
thiserror = "2.0.17"
time = { version = "0.3.36", features = ["serde", "macros", "formatting", "parsing"] }
url = { version = "2.5.2", features = ["serde"] }
url-macro = { version = "0.2.3" }

[dev-dependencies]
async-jsonl = "0.4.0"
pretty_assertions = "1.4.1"
serde_json = "1.0.129"
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["stub-macro", "pretty_assertions"]

[features]
debug = []
